# BANK_mngt_OOP

./: CMakeLists.txt  README.md
Includes/: bankclass.h
datafile/: data.csv
header/: bankclass.cpp
src/: ATM.cpp  Main.cpp
